Fix up terminal args passed to crosh in its args array.

When Crostini users invoke x-terminal-emulator $CMD, the contents of CMD
are eventually passed by CrostiniManager in an args[] array to crosh as part
of its URL.

Fixed in this CL: incorrect usage of vector<StringPiece>.
We were adding more pieces in line 1065 which were derived from temporaries
(return values of net::Escape...). The temporaries were thrown away but the
pieces still pointed to the same memory and we sent nonsense to
base::JoinString().

Bug: 898111
Change-Id: If5d3ffcb6ab28d01698ee48cd7fd3d2230381f95
Reviewed-on: https://chromium-review.googlesource.com/c/1341282
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609539}
Former-commit-id: f02661f81d53c8b3f24a455839dfcf1c356b271a